# seame_ros

./: .gitignore  README.md  main.launch.py
src/Params/: ParamX.txt  ParamY.txt  config.yaml  extrinsics_and_h.yaml  generate_ipm_maps.py  solve_extrinsics_and_ipm.py
src/bag_recorder_nodes/: CMakeLists.txt  package.xml
src/bag_recorder_nodes/src/: simple_bag_recorder.cpp
src/control/: CMakeLists.txt  package.xml
src/control/include/control/: Pid_control.hpp  control_node.hpp
src/control/src/: Pid_control.cpp  control_node.cpp
src/global/: global.cpp  global.hpp
src/lane_detector_py/: package.xml  setup.cfg  setup.py
src/lane_detector_py/lane_detector_py/: binary.py  birdseye.py  lane_detector_node.py  sliding_window.py  visualization.py
src/lane_detector_py/launch/: lane_detector.launch.py
src/perception/: CMakeLists.txt  package.xml
src/perception/include/perception/: CamNode.hpp
src/perception/msg/: Lane.msg
src/perception/src/: CamNode.cpp
src/planning/: CMakeLists.txt  package.xml
src/planning/include/planning/: planning_node.hpp
src/planning/src/: planning_node.cpp
