<?xml version="1.0"?>
<package format="3">
  <name>control</name>
  <version>0.0.1</version>
  <description>Vehicle control stage of the SEA-ME autonomous driving stack.</description>
  <maintainer email="todo@example.com">SEA:ME Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>


  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <depend>yaml-cpp</depend>
  <exec_depend>visualization_msgs</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
